--- a/app/src/main/res/layout/activity_prosmotr.xml
+++ b/app/src/main/res/layout/activity_prosmotr.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".Prosmotr">
 
-    <androidx.appcompat.widget.AppCompatButton
+    <Button
         android:id="@+id/Nazad1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -32,7 +32,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/buy" />
 
-    <androidx.appcompat.widget.AppCompatButton
+    <Button
         android:id="@+id/buy"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
